--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>jobcmax</title>
+		<title>Jobcmax</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
-		<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 		<link rel="icon" type="image/x-icon" href="https://github.com/favicon.ico">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Iosevka/6.0.0/iosevka/iosevka.min.css" integrity="sha512-3hU20586NsplKRzjf2jQN5vTRTI2EsXObrHDOBLGdkiRkneg699BlmBXWGHHFHADCF3TOk2BREsVy7qTkmvQqQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
 	<body>
 		<main class="container">
-			<hgroup>
-				<h1>Yo!</h1>
-				<p>This is <a href="https://github.com/jobcmax">Jobcmax</a> website.</p>
-			</hgroup>
+			<h1>Yo!</h1>
+			<p>This is <a href="https://github.com/jobcmax" target="_blank">Jobcmax</a> website.</p>
 		</main>
 		<script src="app.js"></script>
 	</body>
