--- a/🤠.html
+++ b/🤠.html
@@ -11,7 +11,7 @@
 		<h1 class="header">🤠</h1>
 		<a href="https://github.com/jobcmax/">jobcmax</a>
 		<span>|</span>
-		<a href="https://github.com/jobcmax/xn--8p9h">web src</a>
+		<a href="https://github.com/jobcmax/jobcmax.github.io">web src</a>
 		<script src="app.js"></script>
 	</body>
 </html>
