--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html data-theme="dark">
 	<head>
 		<meta charset="utf-8">
@@ -8,10 +8,14 @@
 		<link rel="icon" type="image/x-icon" href="https://github.com/favicon.ico">
 	</head>
 	<body>
-		<h1 class="header">Jobcmax </h1>
-		<a href="https://github.com/jobcmax/">github</a>
-		<span>|</span>
-		<a href="https://github.com/jobcmax/jobcmax.github.io">web src</a>
+		<div class="center">
+			<h1 class="header">Jobcmax </h1>
+			<div class="links">
+				<a href="https://github.com/jobcmax/">github</a>
+				<span>|</span>
+				<a href="https://github.com/jobcmax/jobcmax.github.io">web src</a>
+			</div>
+		</div>
 		<script src="app.js"></script>
 	</body>
 </html>
