--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<div class="center">
-			<h1 class="header">Jobcmax </h1>
+			<!-- <img src="https://github.com/jobcmax.png" alt="jobcmax" class="pfp"> -->
+			<h1 class="header">Jobcmax</h1>
 			<div class="links">
 				<a href="https://github.com/jobcmax/">github</a>
 				<span>|</span>
