--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Jobcmax</title>
+		<title>Jobcmax.</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
-		<link rel="icon" type="image/x-icon" href="https://github.com/favicon.ico">
+		<meta name="theme-color" content="#000000">
+		<link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter.css">
 	</head>
 	<body>
 		<div class="center">
-			<!-- <img src="https://github.com/jobcmax.png" alt="jobcmax" class="pfp"> -->
-			<h1 class="header">Jobcmax</h1>
-			<div class="links">
-				<a href="https://github.com/jobcmax/">github</a>
-				<span>|</span>
-				<a href="https://github.com/jobcmax/jobcmax.github.io">web src</a>
-			</div>
+			<h1>Hi, im Jobcmax.</h1>
+			<p>I like Ricing, I also draw sometimes.</p>
+			<a href="https://github.com/jobcmax">My Github</a>
 		</div>
 		<script src="app.js"></script>
 	</body>
