--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html data-theme="dark">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Jobcmax.</title>
-		<link rel="stylesheet" type="text/css" href="main.css">
-		<meta name="theme-color" content="#000000">
-		<link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter.css">
-	</head>
-	<body>
-		<div class="center">
-			<h1>Hi, im Jobcmax.</h1>
-			<p>I like Ricing, I also draw sometimes.</p>
-			<a href="https://github.com/jobcmax">My Github</a>
-		</div>
-		<script src="app.js"></script>
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Jobcmax.</title>
+        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="icon" type="image/x-icon" href="https://em-content.zobj.net/thumbs/160/twitter/351/cat-face_1f431.png">
+        <meta name="theme-color" content="#000000">
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+        <link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter.css">
+    </head>
+    <body id="canv">
+        <div class="center">
+            <header>
+                <h1>Jobcmax.</h1>
+                <!-- <span id="cursor"></span> -->
+            </header>
+            <div class="row">
+                <div class="column">
+                    <img src="/svg/git.svg">
+                    <img src="/svg/discord.svg" class="discord">
+                </div>
+                <div class="column">
+                    <a href="https://github.com/jobcmax">Jobcmax</a>
+                    <span>@Jobcmax</span>
+                </div>
+            </div>
+        </div>
+        <script src="app.js"></script>
+    </body>
 </html>
