--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Jobcmax.</title>
+		<title>404</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<meta name="theme-color" content="#000000">
 		<link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter.css">
