--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <img src="/svg/discord.svg" class="discord">
                 </div>
                 <div class="column">
-                    <a href="https://github.com/jobcmax">Jobcmax</a>
-                    <span>@Jobcmax</span>
+                    <a href="https://github.com/jobcmax">jobcmax</a>
+                    <a href="https://discordapp.com/users/821237888238354433">jobcmax</a>
                 </div>
             </div>
         </div>
