--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
 		<title>404</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<meta name="theme-color" content="#000000">
+		<link rel="icon" type="image/x-icon" href="https://em-content.zobj.net/thumbs/160/twitter/351/cat-face_1f431.png">
 		<link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter.css">
 	</head>
 	<body>
