--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
         <link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter.css">
     </head>
-    <body id="canv">
+    <body>
+        <button onClick="window.location='https://github.com/jobcmax.png'"></button>
         <div class="center">
             <header>
                 <h1>Jobcmax.</h1>
